--- a/app/sass/_amount.scss
+++ b/app/sass/_amount.scss
@@ -10,6 +10,7 @@
   align-items: center;
 
   &__reset input {
+    width: 100%;
     background: $strongCyan;
     border: none;
     border-radius: 5px;
@@ -17,8 +18,5 @@
     color: #000;
     font-weight: 400;
     padding: 0.5rem 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
 }
