--- a/app/sass/_container.scss
+++ b/app/sass/_container.scss
@@ -33,3 +33,13 @@
     justify-content: center;
   }
 }
+
+.tip-section input {
+  background: $veryDarkCyan;
+  color: $white;
+  border: none;
+  width: 50px;
+  height: 24px;
+  border-radius: 5px;
+  font-size: 16px;
+}
