--- a/app/sass/_globals.scss
+++ b/app/sass/_globals.scss
@@ -7,4 +7,18 @@
 body {
   background: $darkGrayishCyan;
   font-family: "Space Mono", monospace;
+  font-weight: 400, 500, 700;
+}
+
+label {
+  font-size: 12px;
+}
+
+input {
+  width: 100%;
+  height: 30px;
+}
+
+input:focus {
+  outline: none;
 }
