--- a/app/sass/_amount.scss
+++ b/app/sass/_amount.scss
@@ -1,7 +1,7 @@
 .amount {
   background: $veryDarkCyan;
   padding: 3em;
-  margin-left: 32px;
+
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -30,6 +30,11 @@
     padding: 0.5rem 5rem;
     margin-top: auto;
     cursor: pointer;
+
+    &:active {
+      transform: translateY(1px);
+      background: #1e9d8c;
+    }
   }
 
   h4 {
