--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -5,3 +5,29 @@ $darkGrayishCyan: hsl(184, 14%, 56%);
 $lightGrayishCyan: hsl(185, 41%, 84%);
 $lightGrayishCyan: hsl(189, 41%, 97%);
 $white: hsl(0, 0%, 100%);
+
+@keyframes slideInFromBottom {
+  0% {
+    opacity: 0%;
+    transform: translateY(100%);
+  }
+
+  100% {
+    opacity: 100%;
+    transform: translateY(0%);
+  }
+}
+
+@keyframes hoverEffect {
+  0% {
+    transform: translateY(5%);
+  }
+
+  50% {
+    transform: translateY(0%);
+  }
+
+  100% {
+    transform: translateY(5%);
+  }
+}
